--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "description": "Simple api sample in Node",
   "version": "1.0.0",
   "private": true,
-  "module": "NodeNext",
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register --exec ts-node src/index.ts",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
@@ -17,7 +16,6 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "express-status-monitor": "^1.3.4",
     "helmet": "^8.1.0",
     "typeorm": "^0.3.24",
     "winston": "^3.17.0",
@@ -28,7 +26,6 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
-    "@types/express-status-monitor": "^1.3.3",
     "@types/node": "^20.17.57",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
@@ -40,6 +37,7 @@
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
 }
