--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
+    "typedi": "^0.10.0",
     "typeorm": "^0.3.24",
+    "typeorm-typedi-extensions": "^0.4.1",
     "winston": "^3.17.0",
     "xss": "^1.0.15",
     "zod": "^3.25.48"
